# miaou

./: .envrc  .gitignore  .ocamlformat  .ppx_enforce  .ppx_forbid  AGENTS.md  AGENTS_planner.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE.md  Makefile  README.md  SECURITY.md  TODO_GLOBAL_KEYS.md  TODO_MIAOU.md  demo_braille.sh  dune-project  miaou-core.opam  miaou-core.opam.template  miaou-driver-matrix.opam  miaou-driver-sdl.opam  miaou-driver-term.opam  miaou-driver-web.opam  miaou-mcp.opam  miaou-mcp.opam.template  miaou-registry.opam  miaou-runner.opam  miaou-serve.opam  miaou-tui.opam  miaou-widgets-display-sdl.opam  miaou.opam  miaou.opam.template  package-lock.json  test_space_debug.cmi  test_space_debug.cmo  test_space_debug.ml
doc_examples/: chart_dashboard.ml  dune  first_app.ml  modal_form.ml  responsive_dashboard.ml  smoke.ml  themed_app.ml
example/: README.md  REFACTORING.md  braille_demo.ml  demo.ml  demo_lib.ml  demo_sdl.ml  demo_tui.ml  diagnostics_dashboard.ml  dune  mock_logger.ml  mock_net.ml  mock_service_lifecycle.ml  mock_system.ml  tutorial_modal.ml
example/gallery/: dune  launcher.ml  main_matrix.ml  main_sdl.ml  main_tui.ml  main_web.ml
example/modals/: dune  file_browser_modal.ml  password_textbox_modal.ml  poly_select_modal.ml  select_modal.ml  textbox_modal.ml
example/shared/: arcade_kit.ml  arcade_kit.mli  demo_config.ml  demo_page.ml  dune  mock_logger.ml  mock_palette.ml  mock_system.ml  system_metrics.ml  system_monitor_sdl.ml  tutorial_modal.ml
example/themes/: dark.json  high-contrast.json  light.json
src/: cohttp_net.ml  dune  miaou.ml  net.ml  net.mli
src/lib_miaou_internal/: dune  flash_bus.ml  flash_toast_renderer.ml  headless_driver.ml
src/miaou_canvas/: canvas.ml  canvas.mli  dune
src/miaou_core/: README.md  capability.ml  capability.mli  direct_page.ml  direct_page.mli  dune  file_browser_modal.ml  file_browser_modal.mli  help_hint.ml  help_hint.mli  html_driver.ml  keymap_config.ml  keymap_config.mli  keys.ml  keys.mli  lambda_term_driver.ml  lib_tui.ml  logger.ml  logger.mli  logger_alias.ml  logger_capability.ml  logger_capability.mli  modal_manager.ml  modal_manager.mli  narrow_modal.ml  navigation.ml  navigation.mli  net.ml  net.mli  prompt.ml  prompt.mli  quit_flag.ml  registry.ml  registry.mli  sdl_enabled.ml  service_lifecycle.ml  service_lifecycle.mli  system.ml  system.mli  tui_capture.ml  (+11 more)
src/miaou_driver_common/: driver_common.ml  driver_common.mli  dune  input_parser.ml  input_parser.mli  narrow_warning.ml  narrow_warning.mli  page_transition_utils.ml  page_transition_utils.mli  pager_notify.ml  pager_notify.mli  terminal_raw.ml  terminal_raw.mli
src/miaou_driver_matrix/: dune  matrix_ansi_parser.ml  matrix_ansi_parser.mli  matrix_ansi_writer.ml  matrix_ansi_writer.mli  matrix_buffer.ml  matrix_buffer.mli  matrix_cell.ml  matrix_cell.mli  matrix_config.ml  matrix_config.mli  matrix_diff.ml  matrix_diff.mli  matrix_driver.ml  matrix_driver.mli  matrix_input.ml  matrix_input.mli  matrix_io.ml  matrix_io.mli  matrix_main_loop.ml  matrix_main_loop.mli  matrix_render_loop.ml  matrix_render_loop.mli  matrix_selection.ml  matrix_selection.mli  matrix_terminal.ml  matrix_terminal.mli
src/miaou_driver_sdl/: dune  sdl_ansi.ml  sdl_ansi.mli  sdl_colors.ml  sdl_colors.mli  sdl_config.ml  sdl_driver.ml  sdl_enabled.ml  sdl_events.ml  sdl_events.mli  sdl_font.ml  sdl_font.mli  sdl_render.ml  sdl_render.mli  sdl_renderer.ml  sdl_text_render.ml  sdl_transitions.ml  sdl_window.ml
src/miaou_driver_term/: dune  lambda_term_driver.ml  lambda_term_driver.mli  term_event_reader.ml  term_events.ml  term_events.mli  term_render.ml  term_renderer.ml  term_renderer.mli  term_setup.ml  term_size.ml  term_size_detection.ml  term_size_detection.mli  term_terminal_setup.ml  term_terminal_setup.mli  term_test_runner.ml  term_test_runner.mli
src/miaou_driver_web/: README.md  dune  web_assets.ml  web_driver.ml  web_driver.mli  web_viewer.ml  web_viewer.mli  web_websocket.ml  web_websocket.mli
src/miaou_helpers/: animation.ml  animation.mli  debounce.ml  debounce.mli  dune  fiber_runtime.ml  fiber_runtime.mli  helpers.ml  helpers.mli  mouse.ml  mouse.mli  render_notify.ml  render_notify.mli
src/miaou_interfaces/: capability.ml  capability.mli  clipboard.ml  clipboard.mli  clock.ml  clock.mli  dune  key_event.ml  key_event.mli  logger_capability.ml  logger_capability.mli  palette.ml  palette.mli  service_lifecycle.ml  service_lifecycle.mli  system.ml  system.mli  timer.ml  timer.mli
src/miaou_internals/: README.md  dune  focus_container.ml  focus_container.mli  focus_ring.ml  focus_ring.mli  key_handler_stack.ml  key_handler_stack.mli  modal_debug.ml  modal_debug.mli  modal_renderer.ml  modal_renderer.mli  modal_snapshot.ml  modal_snapshot.mli  modal_utils.ml  modal_utils.mli
src/miaou_mcp/: dune  mcp_tools.ml  mcp_tools.mli  miaou_mcp_main.ml
src/miaou_protocol/: dune  protocol_core.ml  protocol_core.mli  protocol_errors.ml  protocol_errors.mli  protocol_version.ml  protocol_version.mli
src/miaou_registry/: dune  miaou_registry.ml  miaou_registry.mli
test/: dune  modal_multiline_test.ml  serve_stub_worker.ml  test_adaptive_layout.ml  test_animation.ml  test_bar_chart.ml  test_box_widget.ml  test_braille_canvas.ml  test_canvas.ml  test_canvas_widget.ml  test_capture.ml  test_clipboard.ml  test_clipboard_demo.ml  test_core_driver_modal_navigation.ml  test_core_utils.ml  test_debounce.ml  test_description_list.ml  test_direct_page.ml  test_driver_modal_navigation.ml  test_drivers_smoke.ml  test_file_browser.ml  test_file_browser_cache.ml  test_file_browser_extra.ml  test_file_icons.ml  test_file_pager_cleanup.ml  test_file_pager_double_close.ml  test_flash_headless.ml  test_flex_layout.ml  test_focus_container.ml  test_focus_ring.ml  test_framebuffer_widget.ml  test_globe_widget.ml  test_grid_layout.ml  test_headless_debug_gate.ml  test_headless_more.ml  test_headless_run.ml  test_image_widget.ml  test_input_draining.ml  test_input_parser.ml  test_input_widgets.ml  (+66 more)
test/helpers/: dune  (+2 more)
(+482 files in other folders)
