(library
 (name miaou_example)
 (modules
  mock_system
  mock_service_lifecycle
  mock_logger
  mock_net
  mock_palette
  system_metrics)
 (libraries miaou unix))

(library
 (name miaou_demo_lib)
 (modules demo_lib tutorial_modal system_monitor_sdl)
 (wrapped false)
 (libraries miaou miaou_example miaou.lib_miaou_internal tsdl tsdl-ttf))

(include_subdirs no)

(executable
 (name demo_tui)
 (public_name miaou.demo)
 (package miaou)
 (modules demo_tui)
 (libraries miaou_demo_lib miaou miaou.runner.tui))

(executable
 (name demo_sdl)
 (public_name miaou.demo-sdl)
 (package miaou)
 (modules demo_sdl)
 (libraries miaou_demo_lib miaou.runner.native))

(executable
 (name braille_demo)
 (public_name miaou.braille-demo)
 (package miaou)
 (modules braille_demo)
 (libraries miaou.widgets.display))
