;; miaou – umbrella library exposing Core, Widgets, Internals, and Net capability

(include_subdirs no)

(library
 (name miaou)
 (public_name miaou)
 (modules miaou net cohttp_net)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  cohttp
  cohttp-eio
  eio
  eio.unix
  miaou.core
  miaou.interfaces
  miaou.internals
  miaou.widgets.display
  miaou.widgets.input
  miaou.widgets.layout
  miaou.widgets.navigation
  rresult
  uri))
