;; miaou – umbrella library exposing Core, Widgets, Internals, and Net capability

(include_subdirs no)

(library
 (name miaou)
 (public_name miaou-core.lib)
 (modules miaou net cohttp_net)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries
  cohttp
  cohttp-eio
  eio
  eio.unix
  miaou-core.core
  miaou-core.interfaces
  miaou-core.internals
  miaou-core.widgets.display
  miaou-core.widgets.input
  miaou-core.widgets.layout
  miaou-core.widgets.navigation
  rresult
  uri))
