(test
 (name test_vsection)
 (modules test_vsection)
 (libraries alcotest lambda-term miaou-core.widgets.layout))

(test
 (name test_modal_overlay)
 (modules test_modal_overlay)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_modal_wrap)
 (modules test_modal_wrap)
 (libraries alcotest miaou-core.widgets.display miaou-core.internals))

(test
 (name test_widgets)
 (modules test_widgets)
 (libraries
  alcotest
  miaou-core.interfaces
  miaou-core.widgets.layout
  miaou-core.widgets.display))

(test
 (name textbox_widget_test)
 (modules textbox_widget_test)
 (libraries miaou-core.widgets.input))

(test
 (name test_pager_streaming)
 (modules test_pager_streaming)
 (libraries miaou-core.widgets.display))

(test
 (name test_file_pager_cleanup)
 (modules test_file_pager_cleanup)
 (libraries alcotest eio_main miaou-core.helpers miaou-core.widgets.display))

(test
 (name test_file_pager_double_close)
 (modules test_file_pager_double_close)
 (libraries alcotest eio_main miaou-core.helpers miaou-core.widgets.display))

(test
 (name test_adaptive_layout)
 (modules test_adaptive_layout)
 (libraries
  alcotest
  miaou-core.core
  miaou-core.widgets.layout
  miaou-core.lib_miaou_internal))

(test
 (name test_capture)
 (modules test_capture)
 (libraries alcotest miaou-core.core miaou-core.lib_miaou_internal))

(test
 (name test_modal_utils)
 (modules test_modal_utils)
 (libraries alcotest miaou-core.internals miaou-core.widgets.display))

(test
 (name test_layout_utils)
 (modules test_layout_utils)
 (libraries alcotest miaou-core.widgets.layout miaou-core.helpers))

(test
 (name test_layout_widgets_new)
 (modules test_layout_widgets_new)
 (libraries alcotest miaou-core.widgets.layout))

(test
 (name test_flash_headless)
 (modules test_flash_headless)
 (libraries
  alcotest
  miaou-core.lib_miaou_internal
  miaou-core.widgets.display
  miaou-core.widgets.layout))

(test
 (name test_palette)
 (modules test_palette)
 (libraries alcotest miaou-core.interfaces miaou-core.widgets.display))

(test
 (name test_modal_manager)
 (modules test_modal_manager)
 (libraries alcotest miaou-core.core))

(test
 (name test_modal_renderer)
 (modules test_modal_renderer)
 (libraries alcotest miaou-core.internals))

(test
 (name test_drivers_smoke)
 (modules test_drivers_smoke)
 (libraries
  alcotest
  miaou-driver-term.driver
  miaou-driver-sdl.driver
  miaou-runner.common))

(test
 (name test_core_utils)
 (modules test_core_utils)
 (libraries alcotest miaou-core.core miaou-core.internals))

(test
 (name test_pager_extra)
 (modules test_pager_extra)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_file_browser)
 (modules test_file_browser)
 (libraries
  alcotest
  miaou-core.widgets.layout
  miaou-core.interfaces
  miaou-core.widgets.input))

(test
 (name test_integration_tui)
 (modules test_integration_tui)
 (libraries
  alcotest
  miaou-core.core
  miaou-core.widgets.display
  miaou-core.widgets.layout
  miaou-core.lib_miaou_internal))

(test
 (name test_widgets_helpers)
 (modules test_widgets_helpers)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_feedback_widgets)
 (modules test_feedback_widgets)
 (libraries alcotest miaou-core.widgets.layout))

(test
 (name test_textbox_more)
 (modules test_textbox_more)
 (libraries alcotest miaou-core.widgets.input))

(test
 (name test_headless_more)
 (modules test_headless_more)
 (libraries alcotest miaou-core.lib_miaou_internal))

(test
 (name test_file_browser_extra)
 (modules test_file_browser_extra)
 (libraries
  alcotest
  miaou-core.widgets.layout
  miaou-core.widgets.input
  miaou-core.interfaces
  str))

(test
 (name test_table_sdl)
 (modules test_table_sdl)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_headless_run)
 (modules test_headless_run)
 (libraries alcotest miaou-core.lib_miaou_internal))

(test
 (name test_driver_modal_navigation)
 (modules test_driver_modal_navigation)
 (libraries alcotest miaou-core.core miaou-driver-term.driver))

(test
 (name test_core_driver_modal_navigation)
 (modules test_core_driver_modal_navigation)
 (libraries alcotest miaou-core.core miaou-driver-term.driver))

(test
 (name test_navigation_widgets)
 (modules test_navigation_widgets)
 (libraries
  alcotest
  miaou-core.widgets.navigation
  miaou-core.widgets.display))

(test
 (name test_flex_layout)
 (modules test_flex_layout)
 (libraries alcotest miaou-core.widgets.layout miaou-core.widgets.display))

(test
 (name test_input_widgets)
 (modules test_input_widgets)
 (libraries
  alcotest
  miaou-core.widgets.input
  miaou-core.widgets.display
  demo_shared
  checkbox_demo))

(test
 (name test_description_list)
 (modules test_description_list)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_table_wrap)
 (modules test_table_wrap)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_focus_chain)
 (modules test_focus_chain)
 (libraries alcotest miaou-core.internals))

(test
 (name test_sparkline)
 (modules test_sparkline)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_line_chart)
 (modules test_line_chart)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_bar_chart)
 (modules test_bar_chart)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_braille_canvas)
 (modules test_braille_canvas)
 (libraries alcotest miaou-core.widgets.display))

(test
 (name test_registry_validation)
 (libraries miaou alcotest str))

(test
 (name test_input_draining)
 (modules test_input_draining)
 (libraries alcotest))

(test
 (name test_validated_textbox)
 (modules test_validated_textbox)
 (libraries alcotest miaou-core.widgets.input unix))

(test
 (name test_matrix_ansi_parser)
 (modules test_matrix_ansi_parser)
 (libraries alcotest miaou-driver-matrix.driver miaou-core.widgets.display))

(test
 (name test_matrix_diff)
 (modules test_matrix_diff)
 (libraries alcotest miaou-driver-matrix.driver miaou-core.widgets.display))

(test
 (name test_terminal_raw)
 (modules test_terminal_raw)
 (libraries alcotest miaou-core.driver-common unix))

(test
 (name test_input_parser)
 (modules test_input_parser)
 (libraries alcotest miaou-core.driver-common unix))
