(library
 (name demo_shared)
 (modules
  arcade_kit
  demo_config
  demo_page
  mock_system
  mock_service_lifecycle
  mock_logger
  mock_net
  mock_palette
  system_metrics
  system_monitor_sdl
  tutorial_modal)
 (libraries
  miaou
  miaou-core.interfaces
  miaou-core.lib_miaou_internal
  miaou-core.widgets.display
  miaou-widgets-display-sdl.widgets
  tsdl
  tsdl-ttf
  unix))
