(include_subdirs no)

(library
 (name lib_miaou_internal)
 (public_name miaou-core.lib_miaou_internal)
 (modules flash_bus flash_toast_renderer headless_driver)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou-core.core
  miaou-core.internals
  miaou-core.widgets.layout
  lambda-term
  unix))
