(include_subdirs no)

(library
 (name lib_miaou_internal)
 (public_name miaou-core.lib_miaou_internal)
 (modules flash_bus flash_toast_renderer headless_driver)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries
  miaou-core.core
  miaou-core.interfaces
  miaou-core.internals
  miaou-core.helpers
  miaou-core.widgets.layout
  miaou-core.style
  lambda-term
  unix))
