(include_subdirs no)

(library
 (name miaou_core)
 (public_name miaou.core)
 (modules
  keys
  logger_alias
 logger
 system
 service_lifecycle
 modal_manager
 quit_flag
 registry
  lambda_term_driver
  sdl_driver
  sdl_enabled
  html_driver
  tui_driver
 tui_capture
 tui_logger
 tui_page
 workflow
 help_hint
 capability
 lib_tui
 narrow_modal)
(instrumentation (backend bisect_ppx))
(libraries
 miaou_internals
 yojson
 str
 unix
 lwt
 lwt.unix
 miaou.widgets.input
 miaou.widgets.layout
 miaou.widgets.display
 miaou.helpers
 miaou.interfaces
 lambda-term
 tsdl
 tsdl-ttf))
