(include_subdirs no)

(library
 (name miaou_core)
 (public_name miaou-core.core)
 (modules
  keys
  logger_alias
  logger
  navigation
  system
  service_lifecycle
  modal_manager
  quit_flag
  registry
  tui_capture
  tui_logger
  tui_page
  workflow
  help_hint
  capability
  lib_tui
  narrow_modal)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou_internals
  yojson
  str
  unix
  miaou-core.widgets.input
  miaou-core.widgets.layout
  miaou-core.widgets.display
  miaou-core.helpers
  miaou-core.interfaces
  lambda-term))
