(library
 (name miaou_driver_sdl)
 (public_name miaou-driver-sdl.driver)
 (modules
  sdl_enabled
  sdl_config
  sdl_window
  sdl_text_render
  sdl_driver
  sdl_colors
  sdl_transitions
  sdl_font
  sdl_events
  sdl_ansi
  sdl_render
  sdl_renderer)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou-core.core
  miaou-core.helpers
  miaou-core.driver-common
  miaou-core.interfaces
  miaou-core.internals
  miaou-core.widgets.display
  miaou-widgets-display-sdl.widgets
  miaou-core.widgets.input
  miaou-core.widgets.layout
  miaou-core.style
  tsdl
  tsdl-ttf))
