(library
 (name miaou_driver_term)
 (public_name miaou-driver-term.driver)
 (modules
  lambda_term_driver
  term_events
  term_test_runner
  term_size_detection
  term_terminal_setup
  term_renderer
  term_render
  term_event_reader)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou-core.core
  miaou-core.helpers
  miaou-core.driver-common
  miaou-core.interfaces
  miaou-core.internals
  miaou-core.widgets.display
  miaou-core.widgets.input
  miaou-core.widgets.layout
  miaou-core.style
  eio
  eio_main
  eio.unix
  lambda-term))
