(include_subdirs no)

(library
 (name miaou_internals)
 (public_name miaou-core.internals)
 (modules
  modal_renderer
  modal_snapshot
  modal_utils
  key_handler_stack
  focus_chain
  focus_container
  focus_ring)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries
  miaou-core.interfaces
  miaou-core.widgets.layout
  miaou-core.widgets.display
  miaou-core.style
  lambda-term))

;; Key handler stack module added for hierarchical key exclusivity
