; mcp-kit / mcp-kit-eio are not on the default opam repository yet, so
; miaou-mcp is a BUILD-ONLY target — deliberately NOT an installable opam
; package (no root miaou-mcp.opam), so CI's `opam install --deps-only .`
; never tries to resolve the unreleased pin. To build the server, add the
; pin to your switch and build this directory directly:
;   opam pin add -n mcp-kit git+https://github.com/epure-team/ocaml-mcp#feat/split-transport-packages
;   opam pin add -n mcp-kit-eio git+https://github.com/epure-team/ocaml-mcp#feat/split-transport-packages
;   opam install mcp-kit mcp-kit-eio
;   dune build src/miaou_mcp
; `(optional)` means `dune build @all`/`dune runtest` silently skip these
; targets when the pin is absent — but `(optional)` alone is NOT enough:
; `dune build @all` (which CI runs) forces optional targets and hard-fails
; when mcp-kit is absent. `(enabled_if MIAOU_MCP=1)` removes these stanzas
; from the build graph entirely unless a developer opts in, so CI (which
; never sets it) is always green. Build locally with `MIAOU_MCP=1 dune
; build src/miaou_mcp` after adding the pin above.
; Promote to a real opam package once mcp-kit is published. See
; docs/agent-protocol.md "Root-build story".

(library
 (name mcp_tools)
 (modules mcp_tools)
 (enabled_if
  (= %{env:MIAOU_MCP=} 1))
 (optional)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries miaou-runner.protocol yojson mcp-kit))

(executable
 (name miaou_mcp_main)
 (modules miaou_mcp_main)
 (enabled_if
  (= %{env:MIAOU_MCP=} 1))
 (optional)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries
  mcp_tools
  miaou-runner.protocol
  miaou-core.core
  miaou-core.helpers
  demo_shared
  gallery
  yojson
  eio_main
  mcp-kit
  mcp-kit.stdio))
