(library
 (name miaou_serve)
 (public_name miaou-serve.serve)
 (modules
  serve_token
  serve_policy
  serve_config
  serve_rlimit
  serve_worker
  serve_process
  serve_session
  serve_proxy
  serve_supervisor
  serve_run
  miaou_serve
  serve_cli)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou-core.core
  miaou-core.helpers
  miaou-driver-web.driver
  eio
  eio_main
  eio.unix
  unix
  eqaf
  cstruct
  cmdliner))

; FR-030/FR-033 mechanical guard: the CSPRNG source and the constant-time
; comparison are security-load-bearing choices (never Stdlib.Random /
; Random.self_init, never String.equal / (=) for token comparison). This
; makes a regression (e.g. someone "simplifying" serve_token.ml back to
; (=) or Random.self_init) fail the build instead of only being caught by
; a human reviewer re-reading the diff.

(rule
 (alias runtest)
 (deps serve_token.ml)
 (action
  (run
   bash
   -c
   "grep -q 'Eqaf.equal' serve_token.ml && grep -q 'secure_random' serve_token.ml || (echo 'FR-030/FR-033 guard failed: serve_token.ml must use Eqaf.equal and env#secure_random' >&2 && exit 1)")))

; FR-032/FR-033 mechanical guard, Slice 3: serve_session.ml is now the
; module that decides which role a candidate token grants
; (match_role/find) — this is as security-load-bearing as serve_token.ml's
; own comparison, so it must route every token comparison through
; Serve_token.matches (constant-time) and never fall back to
; String.equal/Stdlib's structural (=) on a token value.

(rule
 (alias runtest)
 (deps serve_session.ml)
 (action
  (run
   bash
   -c
   "grep -q 'Serve_token.matches' serve_session.ml && ! grep -qE 'String\\.equal' serve_session.ml || (echo 'FR-032/FR-033 guard failed: serve_session.ml must compare tokens only via Serve_token.matches (no String.equal on token values)' >&2 && exit 1)")))
