(library
 (name miaou_widgets_display)
 (public_name miaou.widgets.display)
 (modules
  pager_widget
  table_widget
  table_widget_sdl
  tree_widget
  description_list
  sparkline_widget
  sparkline_widget_sdl
  line_chart_widget
  line_chart_widget_sdl
  bar_chart_widget
  chart_utils
  sdl_chart_context
  qr_code_widget
  qr_code_widget_sdl
  image_widget
  image_widget_sdl
  widgets
  palette
  palette_sdl)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  yojson
  str
  miaou.helpers
  miaou.interfaces
  tsdl
  qrc
  imagelib
  imagelib.unix))
