(library
 (name miaou_widgets_display)
 (public_name miaou-core.widgets.display)
 (modules
  pager_widget
  file_pager
  table_widget
  table_widget_sdl
  tree_widget
  list_widget
  description_list
  sparkline_widget
  line_chart_widget
  bar_chart_widget
  chart_utils
  braille_canvas
  sdl_chart_context
  qr_code_widget
  image_widget
  widgets
  palette
  palette_sdl)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  yojson
  str
  eio
  eio.unix
  unix
  miaou-core.helpers
  miaou-core.interfaces
  miaou-core.style
  qrc
  imagelib
  imagelib.unix))
